#   $Id: Makefile.am,v 1.2 2003/11/10 11:57:49 rocky Exp $
#
#    Copyright (C) 2003 Rocky Bernstein <rocky@panix.com>
#                  2003 Herbert Valerio Riedel <hvr@gnu.org>
#
#    This program is free software; you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program; if not, write to the Free Software
#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
########################################################

# public installed headers
libvcdincludedir=$(includedir)/libvcd
libvcdinclude_HEADERS = \
	files.h \
	files_private.h \
	inf.h \
	info.h \
	logging.h \
	sector.h \
	types.h \
	version.h

EXTRA_DIST = version.h.in
BUILT_SOURCES = version.h
